syntax = "proto3";

package dk.sdu.mmmi.protobuf.ocpp2_0_1.messages;

import "ChargingProfileType.proto";

option java_multiple_files = true;
option java_package = "dk.sdu.mmmi.protobuf.ocpp2_0_1.messages";

/*
This contains the field definition of the SetChargingProfileRequest PDU sent by the CSMS to the Charging Station. The CSMS uses
this message to send charging profiles to a Charging Station.
 */
message SetChargingProfileRequest {
  /*
  Required. For TxDefaultProfile an evseId=0 applies the
  profile to each individual evse. For ChargingStationMaxProfile and ChargingStationExternalConstraints an evseId=0
  contains an overal limit for the whole Charging Station.
   */
  int32 evseId = 1;

  // Required. The charging profile to be set at the Charging Station.
  datatypes.ChargingProfileType chargingProfile = 2;
}